--- a/css/media.css
+++ b/css/media.css
@@ -1,185 +1,220 @@
 @charset "utf-8";
 
-@media (min-width:1000px) and (min-height: 800px){
+@media (min-width: 1000px) and (min-height: 800px) {
     /*include.css*/
-    #wrap .content_wrap{
+    #wrap .content_wrap {
         width: 900px;
         height: 700px;
         margin-top: -350px;
         margin-left: -450px;
     }
-    .section_title{
+
+    .section_title {
         color: #fff;
         font-size: 40px;
         line-height: 60px;
     }
-    .gnb #home{
+
+    .gnb #home {
         width: 100px;
         height: 100px;
     }
-    .gnb ul{
+
+    .gnb ul {
         width: 100px;
         line-height: 100px;
     }
-    .gnb ul li{
+
+    .gnb ul li {
         margin-top: 40px;
     }
-    .gnb ul li a{
+
+    .gnb ul li a {
         font-size: 20px;
     }
-    #footer{
+
+    #footer {
         font-size: 20px;
         line-height: 40px;
     }
-    
+
     /* width */
     ::-webkit-scrollbar {
         width: 15px;
     }
-    
+
     /*style.css*/
-    #section_01 .section_title{
+    #section_01 .section_title {
         line-height: 100px;
         bottom: 80px;
-        text-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+        text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
     }
-    #section_01 .icon_rocket, #section_01 .icon_rocekt_place{
+
+    #section_01 .icon_rocket, #section_01 .icon_rocekt_place {
         width: 360px;
         height: 750px;
 
         bottom: 150px;
         margin-left: -180px;
     }
-    #section_01 .icon_effect{
+
+    #section_01 .icon_effect {
         width: 460px;
         height: 200px;
 
         bottom: 150px;
         margin-left: -230px;
     }
-    #section_01 .icon_down{
+
+    #section_01 .icon_down {
         width: 40px;
         height: 40px;
         bottom: 40px;
-        margin-left: -20xp;
+        margin-left: -20 xp;
     }
-    
-    #section_02 .tag_list{
+
+    #section_02 .tag_list {
         width: 250px;
     }
-    #section_02 .tag_list li{
+
+    #section_02 .tag_list li {
         margin: 20px 0;
     }
-    #section_02 .tag_list li div{
+
+    #section_02 .tag_list li div {
         padding: 10px;
         font-size: 25px;
     }
-    #section_02 .button{
+
+    #section_02 .button {
         width: 550px;
     }
+
     #section_02 .button .background,
-    #section_02 .button .background:after{
+    #section_02 .button .background:after {
         width: 400px;
         height: 400px;
     }
-    #section_02 .button .background:after{
+
+    #section_02 .button .background:after {
         width: 300px;
         height: 300px;
     }
-    #section_02 .button .button_profile{
+
+    #section_02 .button .button_profile {
         width: 300px;
         height: 450px;
     }
 
-    #section_03{
+    #section_03 {
     }
-    #section_03 .subject_wrap{
+
+    #section_03 .subject_wrap {
         margin: 40px 20px;
     }
-    #section_03 .subject_wrap div{
+
+    #section_03 .subject_wrap div {
         width: 30px;
         height: 30px;
         margin: 0 20px;
     }
-    #section_03 ul{
+
+    #section_03 ul {
         height: 180px;
     }
-    #section_03 ul li{
+
+    #section_03 ul li {
         width: 120px;
         height: 160px;
     }
-    #section_03 .subject_wrap p{
+
+    #section_03 .subject_wrap p {
         font-size: 20px;
     }
-    #section_03 ul li div{
+
+    #section_03 ul li div {
         width: 110px;
         height: 110px;
         padding: 10px;
         line-height: 110px;
         font-size: 20px;
     }
-    #section_03 .level_list{
+
+    #section_03 .level_list {
         margin: 20px 0 10px 0;
     }
-    #section_03 .level_list li{
+
+    #section_03 .level_list li {
         width: 20px;
         height: 20px;
         margin: 0 10px;
     }
-    #section_03 .language_list{
+
+    #section_03 .language_list {
         width: 800px;
     }
-    #section_03 .platform_list{
+
+    #section_03 .platform_list {
         width: 480px;
     }
-    #section_03 .tool_list{
+
+    #section_03 .tool_list {
         width: 320px;
     }
-    
-    
-    #section_04 .work_wrap{
+
+
+    #section_04 .work_wrap {
         height: 600px;
     }
-    #section_04 .button_wrap{
+
+    #section_04 .button_wrap {
         height: 40px;
         line-height: 40px;
     }
-    #section_04 .button_wrap li, #section_04 .button_wrap span{
+
+    #section_04 .button_wrap li, #section_04 .button_wrap span {
         font-size: 20px;
         margin: 0 10px;
     }
-    #section_04 .button_wrap li div{
+
+    #section_04 .button_wrap li div {
         width: 10px;
         height: 10px;
         margin: 0 5px;
     }
 
-    
-    #section_05 .content_wrap{
+
+    #section_05 .content_wrap {
         line-height: 700px;
     }
-    #section_05 .text_wrap{
+
+    #section_05 .text_wrap {
         width: 700px;
         padding-bottom: 120px;
         border-radius: 30px;
     }
+
     #section_05 form {
         padding: 0 40px;
     }
-    #section_05 form p{
+
+    #section_05 form p {
         font-size: 25px;
         line-height: 40px;
         margin: 20px 0 0 0;
     }
-    #section_05 form textarea, #section_05 form input{
+
+    #section_05 form textarea, #section_05 form input {
         height: 50px;
         font-size: 20px;
         line-height: 50px;
     }
-    #section_05 form textarea{
+
+    #section_05 form textarea {
         height: 100px;
-        
+
     }
+
     #section_05 form input[type=submit] {
         width: 260px;
         padding: 10px;
@@ -190,182 +225,216 @@
     }
 }
 
-@media (min-aspect-ratio:10/10) {
+@media (min-aspect-ratio: 10/10) {
     /*include.css*/
-    #wrap .content_wrap{
+    #wrap .content_wrap {
         width: 112.5vh;
         height: 87.5vh;
         margin-top: -43.75vh;
         margin-left: -56.25vh;
     }
-    .section_title{
+
+    .section_title {
         color: #fff;
         font-size: 5vh;
         line-height: 7.5vh;
     }
-    .gnb #home{
+
+    .gnb #home {
         width: 12.5vh;
         height: 12.5vh;
     }
-    .gnb ul{
+
+    .gnb ul {
         width: 12.5vh;
         line-height: 12.5vh;
     }
-    .gnb ul li{
+
+    .gnb ul li {
         margin-top: 2vh;
     }
-    .gnb ul li a{
+
+    .gnb ul li a {
         font-size: 2.5vh;
     }
-    #footer{
+
+    #footer {
         font-size: 2.5vh;
         line-height: 5vh;
     }
-    
+
     /* width */
     ::-webkit-scrollbar {
         width: 1.875vh;
     }
-    
-    
+
+
     /*style.css*/
-    #section_01 .section_title{
+    #section_01 .section_title {
         line-height: 12.5vh;
         bottom: 10vh;
-        text-shadow: 1.25vh 1.25vh 1.25vh rgba(0,0,0,0.5);
+        text-shadow: 1.25vh 1.25vh 1.25vh rgba(0, 0, 0, 0.5);
     }
-    #section_01 .icon_rocket, #section_01 .icon_rocekt_place{
+
+    #section_01 .icon_rocket, #section_01 .icon_rocekt_place {
         width: 45vh;
         height: 93.75vh;
 
         bottom: 18.75vh;
         margin-left: -22.5vh;
     }
-    #section_01 .icon_effect{
+
+    #section_01 .icon_effect {
         width: 57.5vh;
         height: 25vh;
 
         bottom: 18.75vh;
         margin-left: -28.75vh;
     }
-    #section_01 .icon_down{
+
+    #section_01 .icon_down {
         width: 5vh;
         height: 5vh;
         bottom: 5vh;
         margin-left: -2.5vh;
     }
 
-    #section_02 .tag_list{
+    #section_02 .tag_list {
         width: 31.25vh;
     }
-    #section_02 .tag_list li{
+
+    #section_02 .tag_list li {
         margin: 2.5vh 0;
     }
-    #section_02 .tag_list li div{
+
+    #section_02 .tag_list li div {
         padding: 1.25vh;
         font-size: 3.125vh;
     }
-    #section_02 .button{
+
+    #section_02 .button {
         width: 68.75vh;
     }
+
     #section_02 .button .background,
-    #section_02 .button .background:after{
+    #section_02 .button .background:after {
         width: 50vh;
         height: 50vh;
     }
-    #section_02 .button .background:after{
+
+    #section_02 .button .background:after {
         width: 37.5vh;
         height: 37.5vh;
     }
-    #section_02 .button .button_profile{
+
+    #section_02 .button .button_profile {
         width: 37.5vh;
         height: 56.25vh;
     }
 
-    #section_03{
+    #section_03 {
     }
-    #section_03 .subject_wrap{
+
+    #section_03 .subject_wrap {
         margin: 5vh 2.5vh;
     }
-    #section_03 .subject_wrap div{
+
+    #section_03 .subject_wrap div {
         width: 3.75vh;
         height: 3.75vh;
         margin: 0 2.5vh;
     }
-    #section_03 ul{
+
+    #section_03 ul {
         height: 22.5vh;
     }
-    #section_03 ul li{
+
+    #section_03 ul li {
         width: 15vh;
         height: 20vh;
     }
-    #section_03 .subject_wrap p{
+
+    #section_03 .subject_wrap p {
         font-size: 2.5vh;
     }
-    #section_03 ul li div{
+
+    #section_03 ul li div {
         width: 13.75vh;
         height: 13.75vh;
         padding: 1.25vh;
         line-height: 13.75vh;
         font-size: 2.5vh;
     }
-    #section_03 .level_list{
+
+    #section_03 .level_list {
         margin: 2.5vh 0 1.25vh 0;
     }
-    #section_03 .level_list li{
+
+    #section_03 .level_list li {
         width: 2.5vh;
         height: 2.5vh;
         margin: 0 1.25vh;
     }
-    #section_03 .language_list{
+
+    #section_03 .language_list {
         width: 100vh;
     }
-    #section_03 .platform_list{
+
+    #section_03 .platform_list {
         width: 60vh;
     }
-    #section_03 .tool_list{
+
+    #section_03 .tool_list {
         width: 40vh;
     }
-    
-    
-    #section_04 .work_wrap{
+
+
+    #section_04 .work_wrap {
         height: 75vh;
     }
-    #section_04 .button_wrap{
+
+    #section_04 .button_wrap {
         height: 5vh;
         line-height: 5vh;
     }
-    #section_04 .button_wrap li, #section_04 .button_wrap span{
+
+    #section_04 .button_wrap li, #section_04 .button_wrap span {
         font-size: 2.5vh;
         margin: 0 1.25vh;
     }
-    #section_04 .button_wrap li div{
+
+    #section_04 .button_wrap li div {
         width: 1.25vh;
         height: 1.25vh;
         margin: 0 0.625vh;
     }
 
-    
-    #section_05 .content_wrap{
+
+    #section_05 .content_wrap {
         line-height: 87.5vh;
     }
-    #section_05 .text_wrap{
+
+    #section_05 .text_wrap {
         width: 87.5vh;
         padding-bottom: 15vh;
         border-radius: 3.75vh;
     }
+
     #section_05 form {
         padding: 0 5vh;
     }
-    #section_05 form p{
+
+    #section_05 form p {
         font-size: 3.125vh;
         line-height: 5vh;
         margin: 2.5vh 0 0 0;
     }
-    #section_05 form textarea, #section_05 form input{
+
+    #section_05 form textarea, #section_05 form input {
         font-size: 2.5vh;
         line-height: 5.625vh;
     }
+
     #section_05 form input[type=submit] {
         width: 32.5vh;
         padding: 1.25vh;
@@ -376,204 +445,241 @@
     }
 }
 
-@media screen and (orientation:portrait) and (pointer:coarse) and (max-width: 767px){
+@media screen and (orientation: portrait) and (pointer: coarse) and (max-width: 767px) {
     /*include.css*/
-    #wrap .content_wrap{
+    #wrap .content_wrap {
         width: 90vw;
         height: 126vw;
         margin-left: -45vw;
         margin-top: -73vw;
         position: absolute;
     }
-    .section_title{
+
+    .section_title {
         font-size: 6vw;
         line-height: 12vw;
     }
-    #header{
+
+    #header {
         width: 100%;
         height: 100%;
         line-height: 100vh;
-        background: rgba(0,0,0,0.7);
+        background: rgba(0, 0, 0, 0.7);
     }
-    .gnb #home{
+
+    .gnb #home {
         width: 20vw;
         height: 20vw;
     }
-    .gnb ul{
+
+    .gnb ul {
         width: 100%;
         line-height: 18vw;
     }
-    .gnb ul li{
+
+    .gnb ul li {
         margin-top: 5vw;
     }
-    .gnb ul li a{
+
+    .gnb ul li a {
         font-size: 5vw;
         writing-mode: horizontal-tb;
-        -ms-writing-mode:horizontal-tb;
+        -ms-writing-mode: horizontal-tb;
     }
-    .gnb ul li.fullpage_selected a{
+
+    .gnb ul li.fullpage_selected a {
         border: 0;
         border-bottom: 1px solid #fff;
     }
-    #footer{
+
+    #footer {
         font-size: 3vw;
         line-height: 6vw;
     }
-    
+
     /* width */
     ::-webkit-scrollbar {
         width: 1.875vw;
     }
-    
-    
+
+
     /*style.css*/
-    #section_01 .section_title{
+    #section_01 .section_title {
         font-size: 4.5vw;
         line-height: 12vw;
         bottom: 10vw;
-        text-shadow: 1vw 1vw 1vw rgba(0,0,0,0.5);
+        text-shadow: 1vw 1vw 1vw rgba(0, 0, 0, 0.5);
     }
-    #section_01 .icon_rocket, #section_01 .icon_rocekt_place{
+
+    #section_01 .icon_rocket, #section_01 .icon_rocekt_place {
         width: 36vw;
         height: 75vw;
 
         bottom: 20vw;
         margin-left: -18vw;
     }
-    #section_01 .icon_effect{
+
+    #section_01 .icon_effect {
         width: 46vw;
         height: 20vw;
 
         bottom: 20vw;
         margin-left: -23vw;
     }
-    #section_01 .icon_down{
+
+    #section_01 .icon_down {
         width: 5vw;
         height: 5vw;
         bottom: 5vw;
         margin-left: -2.5vw;
     }
 
-    #section_02 .tag_list{
+    #section_02 .tag_list {
         width: 100%;
         margin: 6vw 0 4vw 0;
     }
-    #section_02 .tag_list li{
+
+    #section_02 .tag_list li {
         margin: 1vw;
         display: inline-block;
     }
-    #section_02 .tag_list li div{
+
+    #section_02 .tag_list li div {
         padding: 2vw;
         font-size: 4vw;
     }
-    #section_02 .button{
+
+    #section_02 .button {
         width: 80vw;
         height: 80vw;
     }
+
     #section_02 .button .background,
-    #section_02 .button .background:after{
+    #section_02 .button .background:after {
         width: 60vw;
         height: 60vw;
     }
-    #section_02 .button .background:after{
+
+    #section_02 .button .background:after {
         width: 45vw;
         height: 45vw;
     }
-    #section_02 .button .button_profile{
+
+    #section_02 .button .button_profile {
         width: 50vw;
         height: 75vw;
     }
 
-    #section_03{
+    #section_03 {
     }
-    #section_03 .subject_wrap{
+
+    #section_03 .subject_wrap {
         margin: 2vw 3vw 4vw 3vw;
     }
-    #section_03 .subject_wrap div{
+
+    #section_03 .subject_wrap div {
         width: 4vw;
         height: 4vw;
         margin: 0 2vw;
         margin-left: 4vw;
     }
-    #section_03 .subject_wrap p{
+
+    #section_03 .subject_wrap p {
         font-size: 3vw;
     }
-    #section_03 ul{
+
+    #section_03 ul {
         height: 30vw;
     }
-    #section_03 ul li{
+
+    #section_03 ul li {
         width: 15vw;
         height: 20vw;
     }
-    #section_03 ul li div{
+
+    #section_03 ul li div {
         width: 16vw;
         height: 16vw;
         padding: 2vw;
         line-height: 16vw;
         font-size: 3.2vw;
     }
-    #section_03 .level_list{
+
+    #section_03 .level_list {
         margin: 3vw 0 1vw 0;
     }
-    #section_03 .level_list li{
+
+    #section_03 .level_list li {
         width: 3vw;
         height: 3vw;
         margin: 0 1.5vw;
     }
-    #section_03 .language_list{
+
+    #section_03 .language_list {
         width: 75vw;
     }
-    #section_03 .platform_list{
+
+    #section_03 .platform_list {
         width: 75vw;
     }
-    #section_03 .tool_list{
+
+    #section_03 .tool_list {
         width: 75vw;
     }
-    
-    
-    #section_04 .work_wrap{
+
+
+    #section_04 .work_wrap {
         width: 75vw;
         display: inline-block;
         height: 102vw;
     }
-    #section_04 .button_wrap{
+
+    #section_04 .button_wrap {
         height: 12vw;
         line-height: 6vw;
     }
-    #section_04 .button_wrap li, #section_04 .button_wrap span{
+
+    #section_04 .button_wrap li, #section_04 .button_wrap span {
         font-size: 3.5vw;
         margin: 0 1vw;
     }
-    #section_04 .button_wrap li div{
+
+    #section_04 .button_wrap li div {
         width: 2.5vw;
         height: 2.5vw;
         margin: 0 2vw;
     }
 
-    
-    #section_05 .content_wrap{
+
+    #section_05 .content_wrap {
     }
-    #section_05 .text_wrap{
+
+    #section_05 .text_wrap {
         width: 90vw;
         padding-bottom: 24vw;
         border-radius: 3vw;
     }
+
     #section_05 form {
         padding: 0 5vw;
     }
-    #section_05 form p{
+
+    #section_05 form p {
         font-size: 4vw;
         line-height: 6vw;
         margin: 3vw 0 0 0;
     }
-    #section_05 form textarea, #section_05 form input{
+
+    #section_05 form textarea, #section_05 form input {
         height: 6vw;
         font-size: 3vw;
         line-height: 6vw;
     }
-    #section_05 form textarea{
+
+    #section_05 form textarea {
         line-height: 12vw;
     }
+
     #section_05 form input[type=submit] {
         width: 40vw;
         padding: 2vw;
